--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <li><a href="#home" class="active nav-link"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a href="#about" class="nav-link"><i class="fa-solid fa-user"></i>About</a></li>
                 <li><a href="#skills" class="nav-link"><i class="fa-solid fa-tools"></i>Skills</a></li>
-                <li><a href="#experience" class="nav-link"><i class="fa-solid fa-graduation-cap"></i>Experience</a></li>
-                <li><a href="#project" class="nav-link"><i class="fa-solid fa-briefcase"></i>Projects</a></li>
+                <li><a href="#experience" class="nav-link"><i class="fa-solid fa-briefcase"></i></i>Experience</a></li>
+                <li><a href="#project" class="nav-link"></i><i class="fa-solid fa-book"></i>Projects</a></li>
             </ul>
         </div>
         <!--Main Content-->
@@ -107,7 +107,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#education" class="btn">Education</a>
+                                            <a href="#experience" class="btn">Experience</a>
                                             <a href="#project" class="btn">My Work</a>
                                         </div>
                                     </div>
