--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <div class="row">
                                 <div class="about-text">
                                     <h3>I'm Arya Bhavsar and a <span>Full Stack Web Developer</span></h3>
-                                    <p>I'm a Web Developer with a passion for building user-friendly websites. I am currently studying in Bethel Tech to gain more professional knowledge and experience. I am a great team player and have a strong understanding of front-end and back-end development.</p>
+                                    <p>I'm a Web Developer with a passion for building user-friendly websites. I am currently studying at Bethel Tech to gain more professional knowledge and experience. I am a great team player and have a strong understanding of front-end and back-end development.</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -99,7 +99,7 @@
                                             <p>Phone : <span>+1 (908)-449-7780</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website : <span>www.domain.com</span></p>
+                                            <p>Website : <span>https://aryabhavsar03.github.io/Portfolio/</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Location : <span>Florida, USA</span></p>
@@ -115,9 +115,9 @@
                                 <div class="socials padd-15">
                                     <div class="row">
                                         <ul class="social-item">
-                                            <li><a href="#"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-                                            <li><a href="#"><i class="fa-brands fa-x-twitter"></i>Twitter</a></li>
-                                            <li><a href="#"><i class="fa-brands fa-github"></i>Github</a></li>
+                                            <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+                                            <li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-x-twitter"></i>Twitter</a></li>
+                                            <li><a href="https://github.com/AryaBhavsar03" target="_blank"><i class="fa-brands fa-github"></i>Github</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -251,21 +251,27 @@
                         <div class="project-item padd-15">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
-                                    <img src="images/Player Profile.png" alt="">
+                                    <a href="https://github.com/AryaBhavsar03/ahub-player-page" target="_blank">
+                                        <img src="images/Player Profile.png" alt="">
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-item padd-15">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
-                                    <img src="images/Python Game Snake.png" alt="">
+                                    <a href="https://github.com/AryaBhavsar03/snake-game-python" target="_blank">
+                                        <img src="images/Python Game Snake.png" alt="">
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-item padd-15">
                             <div class="project-item-inner shadow-dark">
                                 <div class="project-img">
-                                    <img src="images/Car Game.png" alt="">
+                                    <a href="https://github.com/AryaBhavsar03/car-game" target="_blank">
+                                        <img src="images/Car Game.png" alt="">
+                                    </a>
                                 </div>
                             </div>
                         </div>
